fix: transition for dark mode

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: calc(1.25rem + 0.1vw);
+  transition: all 250ms ease;
 }
 
 body:after {
